--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/Ash-L2L/bitnames-tg-webapp#readme",
   "dependencies": {
     "aes-js": "^3.1.2",
-    "pbkdf2": "^3.1.2"
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "pbkdf2": "^3.1.2",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "webpack": "^5.83.1",
