--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/Ash-L2L/bitnames-tg-webapp#readme",
   "dependencies": {
+    "@toruslabs/eccrypto": "^3.0.0",
     "aes-js": "^3.1.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "path-browserify": "^1.0.1",
     "pbkdf2": "^3.1.2",
     "stream-browserify": "^3.0.0"
   },
