--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15.0"
+teloxide = {version = "0.12.2", features = ["macros", "rustls"]}
 tokio = {version = "1.28.1", features = ["full"]}
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
