--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/Ash-L2L/bitnames-tg-webapp#readme",
   "dependencies": {
-    "@layertwolabs/eccrypto": "^3.0.0",
+    "@layertwolabs/eccrypto": "file:vendor/eccrypto",
     "aes-js": "^3.1.2",
-    "buffer": "^6.0.3",
+    "buffer": "github:feross/buffer#pull/314/head",
     "canonicalize": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "path-browserify": "^1.0.1",
